input: flex-shrink: 0, fixes flex-direction column height collapse

--- a/input/index.styl
+++ b/input/index.styl
@@ -6,6 +6,7 @@ json('../colors.json')
   height: 64px // top 16px, text 16px, bottom 16px, helper 16px
   display: flex
   flex-direction: column
+  flex-shrink: 0
 
   > .input
     flex: 1
